force-app/main/default/objects/VCG_CPQ_Options__c/VCG_CPQ_Options__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>VCG_CPQ_Options</label>
</CustomObject>