force-app/main/default/objects/VCG_CPQ_Options__c/fields/Count_Total_Owned__c.field-meta.xml
<CustomField>
    <fullName>Count_Total_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Count Total Owned</label>
    <type>Checkbox</type>
</CustomField>