force-app/main/default/objects/VCG_CPQ_Options__c/fields/On_Save_Redirect_To__c.field-meta.xml
<CustomField>
    <fullName>On_Save_Redirect_To__c</fullName>
    <label>On Save Redirect To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>