force-app/main/default/objects/VCG_CPQ_Options__c/fields/Run_Un_Deployed_Components__c.field-meta.xml
<CustomField>
    <fullName>Run_Un_Deployed_Components__c</fullName>
    <inlineHelpText>Enter in usernames for users who are testing un-deployed components (Approval Conditions for now). Un-Deployed components will be skipped and not evaluated for anyone not in this list. Separate with newlines, commas, etc. (matches by doing a contains())</inlineHelpText>
    <label>Run Un-Deployed Components</label>
    <type>TextArea</type>
</CustomField>